# cmaketemplate

./: .gitignore  CMakeLists.txt  build_docker_images.sh  build_images.sh  build_project.sh  doxyfile  run_project.sh
.github/workflows/: docker-image.yml
cmake/: buildconf.cmake  cppcheck.cmake  doxygen.cmake  gcovr.cmake  package.cmake  valgrind.cmake
docker/base/: Dockerfile
docker/builder/: Dockerfile
docker/runtime/: Dockerfile
src/: ilibrary.h  library.cpp  library.h  main.cpp
src/executable/: main.cpp
test/: librarytest.cpp
